--- a/client/src/App.css
+++ b/client/src/App.css
@@ -196,21 +196,99 @@
   /* Roll CSS */
   .dice-roller {
     text-align: center;
-    height: 100vh;
+    height: 89vh;
     background-color: #603696;
   }
   
   .dice-type-selector {
     margin-bottom: 20px;
-    margin-top: 250px;
+    margin-top: 15px;
   }
   
   .roll-dice-container {
-    position: relative;
+    height: 55vh ;
+    margin-left: 10%;
+    margin-right: 10%;
     margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
   }
-  
+
+
+  /* DICE ANIMATION */
+  .roll-animation{
+    animation: dice-roll1 6s ease-in-out;
+  }
+
+  @keyframes dice-roll1 {
+    0% {
+      transform: translateX(0);
+    }
+    1% {
+      transform: translate(-60%, -20%) rotate(290deg);
+    }
+    2% {
+      transform: translate(-25%, -60%) rotate(-245deg);
+    }
+    3% {
+      transform: translate(45%, 80%) rotate(210deg);
+    }
+    4% {
+      transform: translate(60%, -60%) rotate(-190deg);
+    }
+    5% {
+      transform: translate(22%, 80%) rotate(170deg);
+    }
+    6% {
+      transform: translate(-10%, -60%) rotate(-160deg);
+    }
+    7% {
+      transform: translate(-45%, 80%) rotate(30deg);
+    }
+    8% {
+      transform: translate(-60%, 60%) rotate(-95deg);
+    }
+    9% {
+      transform: translate(-40%, -60%) rotate(110deg);
+    }
+    12% {
+      transform: translate(-25%, 78%) rotate(15deg);
+    }
+    17% {
+      transform: translate(30%, -60%) rotate(-65deg);
+    }
+    20% {
+      transform: translate(60%, 0%) rotate(-50deg);
+    }
+    25% {
+      transform: translate(45%, -60%) rotate(220deg);
+    }
+    32% {
+      transform: translate(10%, 78%) rotate(-180deg);
+    }
+    40% {
+      transform: translate(-10%, -60%) rotate(94deg);
+    }
+    50% {
+      transform: translate(-25%, 78%) rotate(-900deg);
+    }
+    70% {
+      transform: translate(-60%, 30%) rotate(720deg);
+    }
+    85% {
+      transform: translate(-20%, -60%) rotate(-540deg);
+    }
+    100% {
+      transform: translate(0%, 0%) rotate(360deg);
+    }
+  }
+
+
   .dice {
+    position: relative;
+    
     width: 150px; /* Adjust size according to your dice images */
     height: 150px;
   }
@@ -227,9 +305,9 @@
   }
   
   button {
-    padding: 10px 20px;
     font-size: 1rem;
     background-color: #007bff;
+    padding: 10px;
     color: white;
     border: none;
     border-radius: 4px;
@@ -239,6 +317,10 @@
   button:disabled {
     opacity: 0.5;
     cursor: not-allowed;
+  }
+
+  button:active {
+    transform: scale(.90)
   }
   
   /* Header and Navigation CSS */
