--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,138 +1,139 @@
+@import url("https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap');
 
-  /* LoginForm CSS */
+/* LoginForm CSS */
 .login-form-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-    background-color: #2F243A;
-    animation: shake 0.5s ease-in-out;
-  }
-  
-  .login-form {
-    background: #0DAB76;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  }
-  
-  .form-group {
-    margin-bottom: 1rem;
-  }
-  
-  .form-group label {
-    display: block;
-    margin-bottom: 0.5rem;
-  }
-  
-  .form-group input {
-    width: 100%;
-    padding: 0.5rem;
-    border: 1px solid black;
-    border-radius: 4px;
-    background-color: #48ACF0;
-  }
-  
-  .login-button {
-    width: 100%;
-    padding: 0.75rem;
-    background-color: #603696;
-    color: #0DAB76;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .login-button:hover {
-    background-color: #48ACF0;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  background-color: #2f243a;
+  animation: shake 0.5s ease-in-out;
+}
 
-  /* UserProfile CSS */
+.login-form {
+  background: #0dab76;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
+
+.form-group {
+  margin-bottom: 1rem;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+.form-group input {
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid black;
+  border-radius: 4px;
+  background-color: #48acf0;
+}
+
+.login-button {
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #603696;
+  color: #0dab76;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.login-button:hover {
+  background-color: #48acf0;
+}
+
+/* UserProfile CSS */
 .user-profile-background {
-    background-color:#0DAB76;
-    width: 100vw; 
-    height: 100vh; 
-    margin: 0; 
-    padding: 0; 
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
-
+  background-color: #0dab76;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .user-profile-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color:#48ACF0;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
-    margin: 2rem auto;
-    margin-bottom: 250px;
-    animation: fadeIn 1s ease-in-out; /* Add animation here */
-  }
-  
-  h1 {
-    margin-bottom: 2rem;
-  }
-  
-  .stats {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    width: 100%;
-  }
-  
-  .stat-item {
-    background: #2F243A;
-    padding: 1rem;
-    margin: 0.5rem;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    flex-basis: 45%;
-    color: white;
-  }
-  
-  .stat-item h2 {
-    margin-bottom: 0.5rem;
-  }
-  
-  .stat-item p {
-    font-size: 1.2rem;
-    font-weight: bold;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #48acf0;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  margin: 2rem auto;
+  margin-bottom: 250px;
+  animation: fadeIn 1s ease-in-out; /* Add animation here */
+}
 
-  /* Signup Form CSS */
-  .signup-form-background {
-    background-color: #48ACF0;
-    width: 100vw; 
-    height: 100vh; 
-    margin: 0; 
-    padding: 0; 
-    display: flex; 
-    align-items: center; 
+h1 {
+  margin-bottom: 2rem;
+}
+
+.stats {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.stat-item {
+  background: #2f243a;
+  padding: 1rem;
+  margin: 0.5rem;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  flex-basis: 45%;
+  color: white;
+}
+
+.stat-item h2 {
+  margin-bottom: 0.5rem;
+}
+
+.stat-item p {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+/* Signup Form CSS */
+.signup-form-background {
+    background-color: #48acf0;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
     justify-content: center;
   }
-
-.signup-form-container {
+  
+  .signup-form-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #0DAB76;
+    background-color: #0dab76;
     padding: 2rem;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); /* Glowing shadow effect for the container */
     height: auto;
     margin: 2rem auto;
     margin-bottom: 250px;
-    animation: fadeIn 1s ease-in-out; /* Add animation here */
+    animation: fadeIn 1s ease-in-out;
   }
   
   .signup-form-container h1 {
     margin-bottom: 2rem;
+    
+    text-shadow: 0 0 5px #603696; /* Glowing shadow effect for the text */
   }
   
   .form {
@@ -146,315 +147,344 @@
     padding: 0.75rem;
     border: 1px solid #ccc;
     border-radius: 4px;
+    background-color: #48acf0; /* Glowing background color for input fields */
+    box-shadow: 0 0 10px rgba(13, 171, 118, 0.5); /* Glowing shadow effect for input fields */
   }
   
   .form button {
     padding: 0.75rem;
-    background-color: #2F243A;
-    color: #0DAB76;
+    background-color: #2f243a;
+    color: #0dab76;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    box-shadow: 0 0 10px rgba(13, 171, 118, 0.5); /* Glowing shadow effect for the button */
   }
   
   .form button:hover {
     background-color: #0056b3;
+    box-shadow: 0 0 20px rgba(13, 171, 118, 0.8); /* Increase shadow on hover for stronger glow */
   }
   
   .error-text {
     color: red;
     margin-top: 1rem;
   }
-  
-
 /* landing page dice */
 .dice-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    overflow: hidden;
-  }
-  
-  .dice {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-  }
-  
-  /* footer CSS */
-  .footer {
-    background-color: #282c34;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  overflow: hidden;
+}
 
-  /* Roll CSS */
-  .dice-roller {
-    text-align: center;
-    height: 89vh;
-    background-color: #603696;
-    animation: pulse 1s ease-in-out infinite; /* Adjust the duration and timing as needed */
-  }
-  
-  .dice-type-selector {
-    margin-bottom: 20px;
-    margin-top: 15px;
-  }
-  
-  .roll-dice-container {
-    height: 55vh ;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
- 
-  }
+.dice {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+}
 
+/* footer CSS */
+.footer {
+  background-color: #282c34;
+  color: #0dab76;
+  padding: 20px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
 
-  /* DICE ANIMATION */
-  .roll-animation{
-    animation: dice-roll1 6s ease-in-out;
-  }
+/* Roll CSS */
+.dice-roller {
+  text-align: center;
+  height: 89vh;
+  background-color: #603696;
+  animation: pulse 2s ease-in-out 3 alternate; /* Adjust the duration and timing as needed */
+}
 
-  @keyframes dice-roll1 {
-    0% {
-      transform: translateX(0);
-    }
-    1% {
-      transform: translate(-60%, -20%) rotate(290deg);
-    }
-    2% {
-      transform: translate(-25%, -60%) rotate(-245deg);
-    }
-    3% {
-      transform: translate(45%, 80%) rotate(210deg);
-    }
-    4% {
-      transform: translate(60%, -60%) rotate(-190deg);
-    }
-    5% {
-      transform: translate(22%, 80%) rotate(170deg);
-    }
-    6% {
-      transform: translate(-10%, -60%) rotate(-160deg);
-    }
-    7% {
-      transform: translate(-45%, 80%) rotate(30deg);
-    }
-    8% {
-      transform: translate(-60%, 60%) rotate(-95deg);
-    }
-    9% {
-      transform: translate(-40%, -60%) rotate(110deg);
-    }
-    12% {
-      transform: translate(-25%, 78%) rotate(15deg);
-    }
-    17% {
-      transform: translate(30%, -60%) rotate(-65deg);
-    }
-    20% {
-      transform: translate(60%, 0%) rotate(-50deg);
-    }
-    25% {
-      transform: translate(45%, -60%) rotate(220deg);
-    }
-    32% {
-      transform: translate(10%, 78%) rotate(-180deg);
-    }
-    40% {
-      transform: translate(-10%, -60%) rotate(94deg);
-    }
-    50% {
-      transform: translate(-25%, 78%) rotate(-900deg);
-    }
-    70% {
-      transform: translate(-60%, 30%) rotate(720deg);
-    }
-    85% {
-      transform: translate(-20%, -60%) rotate(-540deg);
-    }
-    100% {
-      transform: translate(0%, 0%) rotate(360deg);
-    }
-  }
+.dice-type-selector {
+  margin-bottom: 20px;
+  margin-top: 15px;
+}
 
+.roll-dice-container {
+  height: 55vh;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .dice {
-    position: relative;
-    
-    width: 150px; /* Adjust size according to your dice images */
-    height: 150px;
-  }
-  
-  .result {
-    font-size: 2rem;
-    margin-top: 10px;
-  }
-  
-  .rolling {
-    font-size: 2rem;
-    margin-top: 10px;
-    color: blue;
-  }
-  
-  button {
-    font-size: 1rem;
-    background-color: #007bff;
-    padding: 10px;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button:disabled {
-    opacity: 0.5;
-    cursor: not-allowed;
-  }
+/* DICE ANIMATION */
+.roll-animation {
+  animation: dice-roll1 6s ease-in-out;
+}
 
-  button:active {
-    transform: scale(.90)
+@keyframes dice-roll1 {
+  0% {
+    transform: translateX(0);
   }
-  
-  /* Header and Navigation CSS */
+  1% {
+    transform: translate(-60%, -20%) rotate(290deg);
+  }
+  2% {
+    transform: translate(-25%, -60%) rotate(-245deg);
+  }
+  3% {
+    transform: translate(45%, 80%) rotate(210deg);
+  }
+  4% {
+    transform: translate(60%, -60%) rotate(-190deg);
+  }
+  5% {
+    transform: translate(22%, 80%) rotate(170deg);
+  }
+  6% {
+    transform: translate(-10%, -60%) rotate(-160deg);
+  }
+  7% {
+    transform: translate(-45%, 80%) rotate(30deg);
+  }
+  8% {
+    transform: translate(-60%, 60%) rotate(-95deg);
+  }
+  9% {
+    transform: translate(-40%, -60%) rotate(110deg);
+  }
+  12% {
+    transform: translate(-25%, 78%) rotate(15deg);
+  }
+  17% {
+    transform: translate(30%, -60%) rotate(-65deg);
+  }
+  20% {
+    transform: translate(60%, 0%) rotate(-50deg);
+  }
+  25% {
+    transform: translate(45%, -60%) rotate(220deg);
+  }
+  32% {
+    transform: translate(10%, 78%) rotate(-180deg);
+  }
+  40% {
+    transform: translate(-10%, -60%) rotate(94deg);
+  }
+  50% {
+    transform: translate(-25%, 78%) rotate(-900deg);
+  }
+  70% {
+    transform: translate(-60%, 30%) rotate(720deg);
+  }
+  85% {
+    transform: translate(-20%, -60%) rotate(-540deg);
+  }
+  100% {
+    transform: translate(0%, 0%) rotate(360deg);
+  }
+}
+
+.dice {
+  position: relative;
+
+  width: 150px; /* Adjust size according to your dice images */
+  height: 150px;
+}
+
+.result {
+  font-size: 2rem;
+  margin-top: 10px;
+}
+
+.rolling {
+  font-size: 2rem;
+  margin-top: 10px;
+  color: blue;
+}
+
+button {
+  font-size: 1rem;
+  background-color: #007bff;
+  padding: 10px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+button:active {
+  transform: scale(0.9);
+}
+
+/* Header and Navigation CSS */
 header {
-    background-color: #282c34;
-    color: white;
-    padding: 1rem;
-    text-align: center;
-    border-bottom: 2px solid #0DAB76;
-  }
+  background-color: #282c34;
+  color: #0dab76;
+  padding: 1rem;
+  text-align: center;
+  border-bottom: 2px solid #0dab76;
+  margin: 0;
+  padding: 0;
   
-  header h2 {
+}
+
+header h1 {
     margin: 0;
+    font-weight: 200;
+    font-style: normal;
+    font-size: xx-large;
+    color: #0dab76;
+    letter-spacing: 100px;
+    font-family: "Vast Shadow", serif;
+    text-shadow: 0 0 10px #0dab76, 0 0 10px #0dab76, 0 0 20px #0dab76, 0 0 15px #0dab76, 0 0 5px #0dab76, 0 0 25px #0dab76, 0 0 25px #0dab76;
   }
   
-  nav {
-    margin-top: 1rem;
-  }
-  
-  .nav {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .nav-item {
-    margin: 0 1rem;
-  }
-  
-  .nav-link {
-    text-decoration: none;
-    color: #0DAB76;
-    padding: 0.5rem 1rem;
-    border-radius: 4px;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  
-  .nav-link:hover {
-    background-color: #0DAB76;
-    color: white;
-  }
-  
-  .nav-link.active {
-    background-color: #0DAB76;
-    color: white;
-  }
+
+nav {
+  margin-top: 1rem;
+}
+
+.nav {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-item {
+  margin: 0 1rem;
+}
+
+.nav-link {
+  color: #0dab76;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  transition: background-color 0.3s, color 0.3s;
+  text-shadow: 0 0 5px #007bff, 0 0 2px #007bff, 0 0 1px #007bff, 0 0 2px #007bff, 0 0 3px #007bff, 0 0 5px #007bff, 0 0 5px #007bff;
+
+}
+
+.nav-link:hover {
+  background-color: #0dab76;
+  color: white;
+}
+
+.nav-link.active {
+  background-color: #0dab76;
+  color: white;
+}
 
 /* src/App.css */
 .main-container {
-    padding: 20px;
-  }
-  
-  .content-container {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .main-content {
-    flex: 3;
-    padding-right: 20px;
-  }
-  
-  .leaderboard-container {
-    flex: 1;
-    max-width: 300px; /* Adjust this value as needed */
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    padding: 10px;
-  }
-  
-  
-  
-  
+  display: flex;
+  flex-direction: column;
+  /* padding: 20px; */
+}
+
+.content-container {
+  display: flex;
+  flex: 1;
+}
+
+.main-content {
+  flex: 3;
+  /* padding-right: 20px; */
+}
+
+.leaderboard-container {
+  flex: 1;
+  max-width: 300px; /* Adjust this value as needed */
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  max-height: 100vh;
+  /* padding: 10px; */
+  margin-left: 1px; /* Space between main content and leaderboard */
+}
 
 /* src/components/Leaderboard.css */
 .leaderboard {
-    text-align: center;
-    padding: 10px;
-    border: 1px solid #ddd;
-    background-color: #f9f9f9;
-  }
-  
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 10px;
-  }
-  
-  th, td {
-    padding: 8px;
-    border: 1px solid #ddd;
-  }
-  
-  th {
-    background-color: #f4f4f4;
-  }
-  
+  text-align: center;
+  padding: 10px;
+  border: 1px solid #ddd;
+  background-color: #f9f9f9;
+  /* width: 50%; */
+  margin-left: 100px;
+}
 
+.leaderboard h2 {
+    font-family: "Jacquard 12", system-ui;
+    color: #0dab76;
+}
 
-
-
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
   
+}
+
+th,
+td {
+  padding: 8px;
+  border: 1px solid #ddd;
   
-  /* Define the keyframes for the fade-in animation */
+}
+
+th {
+  background-color: #f4f4f4;
+}
+
+/* Define the keyframes for the fade-in animation */
 @keyframes fadeIn {
-    from {
-      opacity: 0;
-      transform: translateY(20px); /* Slight upward movement */
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0); /* Reset the movement */
-    }
+  from {
+    opacity: 0;
+    transform: translateY(20px); /* Slight upward movement */
   }
-
-  @keyframes shake {
-    0% { transform: translateX(0); }
-    25% { transform: translateX(-5px); }
-    50% { transform: translateX(5px); }
-    75% { transform: translateX(-3px); }
-    100% { transform: translateX(0); }
+  to {
+    opacity: 1;
+    transform: translateY(0); /* Reset the movement */
   }
+}
 
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  75% {
+    transform: translateX(-3px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
 
-  /* Define the keyframes for the pulse animation */
+/* Define the keyframes for the pulse animation */
 @keyframes pulse {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.05); }
-    100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
   }
-  
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
