--- a/client/src/pages/Landing/style/landing1.css
+++ b/client/src/pages/Landing/style/landing1.css
@@ -1,8 +1,7 @@
 /* Roll CSS */
 .dice-roller {
   text-align: center;
-  width: 100%;
-  height: 100%;
+  height: 89vh;
   background-color: #603696;
   /* animation: pulse 2s ease-in-out 3 alternate; Adjust the duration and timing as needed */
 }
@@ -13,67 +12,22 @@
 }
 
 .roll-dice-container {
-  width: auto;
-  height: auto;
-  margin-top: 20%;
-  margin-bottom: 20%;
+  height: 55vh;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.dice-wrapper {
-  position: relative;
-  width: auto;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.dice {
-  width: auto;
-  height: 200px;
-}
-
-.dice-number {
-  position: static;
-  font-size: 2rem;
-  z-index: 2;
-  color: white;
-}
-
-.rolling {
-  font-size: 2rem;
-  margin-top: 10px;
-  color: blue;
-}
-
-button {
-  font-size: 1rem;
-  background-color: #007bff;
-  padding: 10px;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-button:disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
-
-button:active {
-  transform: scale(0.9);
-}
 
 /* DICE ANIMATION */
 .roll-animation {
-  animation: dice-roll 6s ease-in-out;
+  animation: dice-roll1 6s ease-in-out;
 }
 
-@keyframes dice-roll {
+@keyframes dice-roll1 {
   0% {
     transform: translateX(0);
   }
@@ -134,4 +88,40 @@ button:active {
   100% {
     transform: translate(0%, 0%) rotate(360deg);
   }
+}
+
+.dice {
+  position: relative;
+  width: 150px;
+  height: 150px;
+}
+
+.result {
+  font-size: 2rem;
+  margin-top: 10px;
+}
+
+.rolling {
+  font-size: 2rem;
+  margin-top: 10px;
+  color: blue;
+}
+
+button {
+  font-size: 1rem;
+  background-color: #007bff;
+  padding: 10px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+button:active {
+  transform: scale(0.9);
 }
