--- a/client/src/pages/Roll/style/Roll2.css
+++ b/client/src/pages/Roll/style/Roll2.css
@@ -1,3 +1,73 @@
+/* Roll CSS */
+.dice-roller {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  background-color: #603696;
+  /* animation: pulse 2s ease-in-out 3 alternate; Adjust the duration and timing as needed */
+}
+
+.dice-type-selector {
+  margin-bottom: 20px;
+  margin-top: 15px;
+}
+
+.roll-dice-container {
+  width: auto;
+  height: auto;
+  margin-top: 20%;
+  margin-bottom: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dice-wrapper {
+  position: relative;
+  width: auto;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dice {
+  width: auto;
+  height: 200px;
+}
+
+.dice-number {
+  position: static;
+  font-size: 2rem;
+  z-index: 2;
+  color: white;
+}
+
+.rolling {
+  font-size: 2rem;
+  margin-top: 10px;
+  color: blue;
+}
+
+button {
+  font-size: 1rem;
+  background-color: green;
+  padding: 10px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+button:active {
+  transform: scale(0.9);
+}
+
 /* DICE ANIMATION */
 .roll-animation {
   animation: dice-roll 6s ease-in-out;
@@ -67,36 +137,4 @@
   100% {
     transform: translate(0%, 0%) rotate(-3600deg);
   }
-}
-
-.dice {
-  position: relative;
-
-  width: auto;
-  height: 150px;
-}
-
-.rolling {
-  font-size: 2rem;
-  margin-top: 10px;
-  color: red;
-}
-
-button {
-  font-size: 1rem;
-  background-color: purple;
-  padding: 10px;
-  color: pink;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-button:disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
-
-button:active {
-  transform: scale(0.9);
 }
