--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,11 @@
   overflow: hidden;
 }
 
+.card {
+  height: 100%;
+  min-width: 200px;
+}
+
 .dice {
   width: 50px;
   height: 50px;
@@ -20,19 +25,18 @@
 
 /* src/App.css */
 .main-container {
-  display: flex;
-  flex-direction: column;
   margin: 0 auto;
   /* padding: 20px; */
 }
 
 .content-container {
   display: flex;
-  flex: 1;
 }
 
 .main-content {
-  flex: 3;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
 }
 
 .leaderboard-container {
