--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -4,7 +4,7 @@
     color: #0dab76;
     padding: 20px;
     text-align: center;
-    position: fixed;
+    position: sticky;
     bottom: 0;
     left: 0;
     width: 100%;
