--- a/client/src/pages/Landing/style/landing1.css
+++ b/client/src/pages/Landing/style/landing1.css
@@ -11,7 +11,7 @@
   margin-top: 15px;
 }
 
-.roll-dice-container {
+/* .roll-dice-container {
   height: 55vh;
   margin-left: 10%;
   margin-right: 10%;
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
 
 /* DICE ANIMATION */
@@ -90,7 +90,7 @@
   }
 }
 
-.dice {
+.homedice {
   position: relative;
   width: 150px;
   height: 150px;
