--- a/client/src/pages/Roll/style/Roll1.css
+++ b/client/src/pages/Roll/style/Roll1.css
@@ -1,9 +1,10 @@
 /* Roll CSS */
 .dice-roller {
   text-align: center;
-  width: 100%;
-  height: 100%;
   background-color: #603696;
+  padding: 10%;
+  height: auto;
+  width: 100%;
   /* animation: pulse 2s ease-in-out 3 alternate; Adjust the duration and timing as needed */
 }
 
