--- a/client/src/pages/UserProfile/userProfile.css
+++ b/client/src/pages/UserProfile/userProfile.css
@@ -1,12 +1,13 @@
 /* UserProfile CSS */
 .user-profile-background {
     background-color: #0dab76;
-    height: 100vh;
     margin: 0;
-    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 10%;
+    height: auto;
+    width: 100%;
   }
   
   .user-profile-container {
