Included CSS for changing sizes on smaller screens.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap");
 
 /* landing page dice */
 .dice-container {
@@ -45,7 +45,7 @@
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   max-height: 100vh;
-  margin-left: 1px; 
+  margin-left: 1px;
 }
 
 /* Define the keyframes for the fade-in animation */
@@ -88,5 +88,11 @@
   }
   100% {
     transform: scale(1);
+  }
+}
+
+@media (max-width: 500px) {
+  .card {
+    min-width: 140px;
   }
 }
