--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,21 @@
 .card {
   height: 100%;
   min-width: 200px;
+  background: linear-gradient(45deg, #282c34, #eaeaea);
+  background-size: 400% 400%;
+  animation: gradientFlow 5s ease infinite;
+}
+
+@keyframes gradientFlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .dice {
@@ -94,5 +109,18 @@
 @media (max-width: 500px) {
   .card {
     min-width: 140px;
+  }
+}
+
+
+@keyframes gradientBackground {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
