--- a/client/src/pages/Roll/style/Roll3.css
+++ b/client/src/pages/Roll/style/Roll3.css
@@ -5,7 +5,21 @@
   padding: 10%;
   height: auto;
   width: 100%;
-  /* animation: pulse 2s ease-in-out 3 alternate; Adjust the duration and timing as needed */
+  background: linear-gradient(45deg, #603696, #80d6ff, #0dab76, #007bff);
+  background-size: 400% 400%;
+  animation: gradientFlow 5s ease infinite;
+}
+
+@keyframes gradientFlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .dice-type-selector {
