friend list modal is looking decent. got it positioned on the page how I want

--- a/client/src/components/FriendList/friendlist.css
+++ b/client/src/components/FriendList/friendlist.css
@@ -2,6 +2,14 @@ button {
     margin: 5px;
 };
 
-.modal-custom {
-    color: aqua;
+/* this is not making my modal custom :(  */
+#modal-custom {
+    background-color: aqua;
+}
+
+.modal-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 10px;
 }
