--- a/client/src/pages/SigninForm/style/loginSignup1.css
+++ b/client/src/pages/SigninForm/style/loginSignup1.css
@@ -1,6 +1,9 @@
 /* Signup Form CSS */
 .signup-form-background {
-  background-color: #48acf0;
+  position: relative;
+  background: linear-gradient(45deg, #48acf0, #80d6ff, #603696, #48acf0);
+  background-size: 400% 400%;
+  animation: gradientFlow 5s ease-in-out infinite;
   margin: 0;
   display: flex;
   align-items: center;
@@ -8,6 +11,18 @@
   padding: 10%;
   height: auto;
   width: 100%;
+}
+
+@keyframes gradientFlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .signup-form-container {
@@ -67,15 +82,31 @@
 }
 
 /* LoginForm CSS */
-.login-form-container {
+/* Signup Form CSS */
+.signup-form-background {
+  position: relative;
+  background: linear-gradient(45deg, #48acf0, #80d6ff, #603696, #48acf0);
+  background-size: 400% 400%;
+  animation: gradientFlow 5s ease-in-out infinite;
+  margin: 0;
   display: flex;
-  justify-content: center;
   align-items: center;
-  background-color: #2f243a;
-  animation: shake 0.5s ease-in-out;
+  justify-content: center;
   padding: 10%;
   height: auto;
   width: 100%;
+}
+
+@keyframes gradientFlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .login-form {
@@ -104,7 +135,7 @@
   background-color: #48acf0;
 }
 
-.login-button {
+.login-button, .signup-button {
   width: 100%;
   padding: 0.75rem;
   background-color: #603696;
@@ -114,8 +145,11 @@
   cursor: pointer;
 }
 
-.login-button:hover {
-  background-color: #48acf0;
+.login-button:hover, 
+.signup-button:hover {
+  background: linear-gradient(45deg, #48acf0, #80d6ff, #603696, #48acf0);
+  background-size: 400% 400%;
+  animation: gradientFlow 1s cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 
 /* Responsive Media Queries */
@@ -129,7 +163,7 @@
     font-size: 1.8rem;
   }
 
-  .form input, .form button, .login-button {
+  .form input, .form button, .login-button, .signup-button {
     padding: 0.6rem;
   }
 }
@@ -148,7 +182,7 @@
     font-size: 1.5rem;
   }
 
-  .form input, .form button, .login-button {
+  .form input, .form button, .login-button, .signup-button {
     padding: 0.5rem;
     font-size: 0.9rem;
   }
@@ -169,7 +203,7 @@
     margin-bottom: 1rem;
   }
 
-  .form input, .form button, .login-button {
+  .form input, .form button, .login-button, .signup-button {
     padding: 0.4rem;
     font-size: 0.8rem;
   }
@@ -185,4 +219,8 @@
   height: auto;
   margin: 0;
   padding: 0;
+  background: linear-gradient(45deg, #48acf0, #80d6ff, #603696, #48acf0);
+  background-size: 400% 400%;
+  animation: gradientFlow 5s ease-in-out infinite;
+  font-family: "Vast Shadow", serif;
 }
